--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar-alan.jpg"
+          src="./assets/avatar1.png"
           alt="Foto Alan Beber Martins, usando óculos camisa azul, está na praia"
         />
         <p>@alanbebermartins</p>
